--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1240,6 +1240,153 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
+.cid-s6uxdZcztv {
+  background-color: #2aa7ab;
+}
+@media (min-width: 992px) {
+  .cid-s6uxdZcztv .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6uxdZcztv .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6uxdZcztv .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6uFmSHCK6 {
+  background-color: #7f1933;
+}
+.cid-s6uFmSHCK6 .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-s6uFmSHCK6 .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6uFmSHCK6 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6uFmSHCK6 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6uYyDjKNZ {
+  background-color: #2aa7ab;
+}
+@media (min-width: 992px) {
+  .cid-s6uYyDjKNZ .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6uYyDjKNZ .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6uYyDjKNZ .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6v3b5OK8r {
+  background-color: #7f1933;
+}
+.cid-s6v3b5OK8r .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-s6v3b5OK8r .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6v3b5OK8r .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6v3b5OK8r .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6v3J3mrBf {
+  background-color: #2aa7ab;
+}
+@media (min-width: 992px) {
+  .cid-s6v3J3mrBf .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6v3J3mrBf .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6v3J3mrBf .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6v4gP2Xz1 {
+  background-color: #7f1933;
+}
+.cid-s6v4gP2Xz1 .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-s6v4gP2Xz1 .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s6v4gP2Xz1 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s6v4gP2Xz1 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-s6uhhv8orv {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s6uhhv8orv .title {
+  margin-bottom: 2rem;
+}
+.cid-s6uhhv8orv .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s6uhhv8orv a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-s6uhhv8orv a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-s6uhhv8orv textarea.form-control {
+  min-height: 188px;
+}
 .cid-rJaCqbsz7h {
   padding-top: 30px;
   padding-bottom: 30px;
